fix urls db, final

--- a/nahor/templates/home.html
+++ b/nahor/templates/home.html
@@ -39,7 +39,7 @@
             </div>
          </div>
          <footer>
-            <p>&copy; Naren 2015</p>
+            <p>&copy; Rohan Bansal, 2020</p>
          </footer>
          </div> 
       </body>
