fix site issues

--- a/nahor/templates/home.html
+++ b/nahor/templates/home.html
@@ -8,7 +8,7 @@
          <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                <div class="navbar-header">
-                  <a class="navbar-brand" href="#">URL Shortener for Dummies</a>
+                  <a class="navbar-brand" href="#">Nahor</a>
                </div>
                <div id="navbar" class="navbar-collapse collapse">
                </div>
@@ -39,7 +39,7 @@
             </div>
          </div>
          <footer>
-            <p>&copy; Rohan Bansal, 2020</p>
+            <!-- <p>&copy; Rohan Bansal, 2020</p> -->
          </footer>
          </div> 
       </body>
