--- a/nahor/templates/index.html
+++ b/nahor/templates/index.html
@@ -42,6 +42,7 @@
                               <h3 style="color: gainsboro; margin-top: 2%;">Shortened Link</h3>
                               <h3><a style="color: white" href="{{short_url}}" id="copyurl"> {{short_url}}</a></h3>
                               <h5><a style="color: royalblue" href="#" onclick="this.style.color='green'; copyToClipboard('#copyurl')" id="copybutton">Copy</a></h5>
+                              <a href="/" id="backarrow" style="position: absolute; bottom: 8em"><i class="fa fa-angle-double-left animate__animated animate__fadeInUp animate__delay-2s" style="color: white; font-size: 5em;"></i></a>
                               {% endif %}
                          </div>
                     </div>
