--- a/nahor/static/css/templatemo-style.css
+++ b/nahor/static/css/templatemo-style.css
@@ -99,6 +99,12 @@
 
   .subscribe-form {
     position: relative;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
   }
 
   .subscribe-form .form-control {
@@ -106,7 +112,7 @@
     box-shadow: none;
     border: 0;
     border-radius: 50px;
-	width: 340px;
+	  width: 340px;
     height: 45px;
     padding: 6px 30px;
   }
