--- a/nahor/static/css/templatemo-style.css
+++ b/nahor/static/css/templatemo-style.css
@@ -319,6 +319,8 @@
     align-items: center;
     text-align: center;
     position: relative;
+    width: 100vw;
+    height: 100vh;
   }
 
   #home .container {
