--- a/nahor/templates/index.html
+++ b/nahor/templates/index.html
@@ -57,6 +57,7 @@
                               <h3><a style="color: white" href="{{short_url}}" id="copyurl"> {{short_url}}</a></h3>
                               <h5><a style="color: royalblue" href="#" onclick="this.style.color='green'; copyToClipboard('#copyurl')" id="copybutton">Copy</a></h5>
                               <a href="/" id="backarrow" style="position: absolute; bottom: 8em"><i class="fa fa-angle-double-left animate__animated animate__fadeInUp animate__delay-2s" style="color: white; font-size: 5em;"></i></a>
+                              <!-- <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="rohanbansal" data-color="#5F7FFF" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000" data-font-color="#fff" data-coffee-color="#fd0" ></script> -->
                               {% endif %}
                          </div>
                     </div>
